--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "my-chat-app",
   "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.0.0"
-  },
-  "devDependencies": {
-    "vite": "^7.1.5",
-    "@vitejs/plugin-react": "^4.0.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@supabase/supabase-js": "^2.35.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^7.1.5"
   }
 }
