--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-chat-app",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
